--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.8",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.8",
+    "leaflet": "^1.9.4",
     "next": "^15.0.3",
+    "ol": "^10.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
     "swiper": "^11.1.15"
   },
@@ -26,5 +30,4 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
-  
 }
