--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^15.0.3",
     "ol": "^10.3.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
