--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "@mui/material": "^6.1.8",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "next": "^15.0.3",
     "ol": "^10.3.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
-    "swiper": "^11.1.15"
+    "react-simplemde-editor": "^5.2.0",
+    "swiper": "^11.1.15",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
