--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.8",
     "@react-google-maps/api": "^2.20.3",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.9",
     "next": "^15.0.3",
     "ol": "^10.3.0",
     "react": "^18.3.1",
