--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.8",
     "@react-google-maps/api": "^2.20.3",
+    "@tosspayments/payment-sdk": "^1.9.1",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
+    "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
