--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "nanoid": "^5.0.9",
@@ -35,6 +36,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/node": "22.10.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
