--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.7.8",
+    "cookies-next": "^5.0.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
