--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.2.1",
     "@react-google-maps/api": "^2.20.3",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@tosspayments/payment-sdk": "^1.9.1",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.7.9",
     "cookies-next": "^5.0.2",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
@@ -28,6 +31,7 @@
     "ol": "^10.3.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
