--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@iconify-icons/mdi": "^1.2.48",
+    "@iconify/react": "^5.2.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.2.1",
     "@react-google-maps/api": "^2.20.3",
+    "@stomp/stompjs": "^7.0.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "@tosspayments/payment-sdk": "^1.9.1",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
@@ -37,6 +40,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
     "react-simplemde-editor": "^5.2.0",
+    "sockjs-client": "^1.6.1",
     "swiper": "^11.1.15",
     "zustand": "^5.0.2"
   },
